# magnetic_tweezers_brugueslab

./: .gitignore  README.md  environment.yml  environment_mag_tw.yml  pyproject.toml
_snippets_from_previous_projects/: S02_pyserial.py  V01_calibrationRobotCamera.ipynb  (+2 more)
magnetic_tweezers_brugueslab/: README.md  pyproject.toml
magnetic_tweezers_brugueslab/_snippets_from_previous_projects/: S02_pyserial.py  T01_injectMan.py  T02_injectMan_Draw.py
magnetic_tweezers_brugueslab/docs/: readme_environment_setup.txt
magnetic_tweezers_brugueslab/scripts/inject_man/: Testing_injectman.ipynb  inject_man.py  serial_connection.py  testing.py
magnetic_tweezers_brugueslab/scripts/inject_man/development_tools/: readme_development_tools.txt
magnetic_tweezers_brugueslab/scripts/inject_man/development_tools/string_echo/: string_echo.ino
magnetic_tweezers_brugueslab/scripts/voltage_control/: Run_VoltageControl.ipynb  TODO____IMPORTANT____######.TXT  Testing_VoltageControl.ipynb  my_funcs.py  serial_connection.py
magnetic_tweezers_brugueslab/scripts/voltage_control/arduino_sources/V01_voltageControl/: V01_voltageControl.ino
magnetic_tweezers_brugueslab/scripts/voltage_control/arduino_sources/V02_pcb_hotfix/: V02_pcb_hotfix.ino
magnetic_tweezers_brugueslab/scripts/voltage_control/development_tools/: S02_PySerial.py  S03_PySerialContinous.py  S04_efficientReadlineTest.py
magnetic_tweezers_brugueslab/scripts/voltage_control/measurements/: voltage_timeseries_1.txt
magnetic_tweezers_brugueslab/scripts/voltage_control/testing_snippets/: readme_testing_snippets.txt
(+37 files in other folders)
